--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,14 +4,12 @@
 
 - clean: ['~']
 
-# - link:
-#    ~/.tmux.conf: tmux.conf
-#    ~/.vim: vim
-#    ~/.vimrc: vimrc
+- link:
+    ~/.zshrc:
+    ~/.gitconfig:
 
 - create:
     - ~/Work
-    - ~/hey/you/guys
 
 # - shell:
 #  - [git submodule update --init --recursive, Installing submodules]
