added lots of stuff

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,9 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
+[submodule "prezto"]
+	path = prezto
+	url = https://github.com/sorin-ionescu/prezto.git
+[submodule "keyboard"]
+	path = keyboard
+	url = https://github.com/jasonrudolph/keyboard.git
